<resources>
    <string name="app_name">Neighbor2you</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="exit">Exit without logout</string>
    <string name="Register">Register</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phonenumber">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="xlistview_header_hint_normal">Pull to refresh</string>
    <string name="xlistview_header_hint_ready">Loose to refresh</string>
    <string name="xlistview_header_hint_loading">Loading...</string>
    <string name="xlistview_header_last_time">Recent update time：</string>
    <string name="xlistview_footer_hint_normal">More</string>
    <string name="xlistview_footer_hint_ready">Loose to load</string>
    <string name="Posted_Requests">Posted Requests</string>
    <string name="Status">Status</string>
    <string name="List_item">List Item</string>
    <string name="Post">Post</string>
    <string name="Post_Item_Info">Post Item Info</string>
    <string name="Item_Name">Item Name</string>
    <string name="Price">Price</string>
    <string name="Deadline">Deadline</string>
    <string name="Confirm">Confirm</string>
    <string name="Arrived">Arrived</string>
    <string name="Profile">Profile</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="poster">Poster</string>
    <string-array name="menu">
        <item>Main Page</item>
        <item>Post Request</item>
        <item>Posted Request</item>
        <item>Accepted Request</item>
        <item>Profile</item>
        <item>Track Order</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_post_request">PostRequest</string>
    <string-array name="status">
    <item>On the way</item>
    <item>Buying</item>
    <item>Delivery</item>
    <item>Arrived</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="scan_resut_lable">Scan Result:</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it. </string>
    <string name="title_activity_maps">Map</string>
</resources>
