<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDF8FA"
        android:orientation="vertical"
        >

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/oil"
                        />
        <TableLayout
            android:id="@+id/p_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/image"
            android:layout_marginLeft="10dp"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/itemNameEditText"
                    android:text="@string/name"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"
                    android:id="@+id/itemName"

                    android:padding="3dip" />
                <EditText
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/image"

                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:hint="Sunflower Oil"
                    android:id="@+id/itemNameEditText"

                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"

                    android:text="@string/Price"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"
                    android:id="@+id/p_price"

                    android:padding="3dip" />
                <EditText
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/image"

                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:hint="$ 8.00"
                    android:id="@+id/p_priceEdit"

                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/itemNameEditText"
                    android:text="@string/address"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"
                    android:id="@+id/p_address"

                    android:padding="3dip" />
                <EditText
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/image"

                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:hint="280 Easy Street"
                    android:id="@+id/p_addressEdit"

                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/itemNameEditText"
                    android:text="@string/phonenumber"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"
                    android:id="@+id/p_phone"

                    android:padding="3dip" />
                <EditText
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/image"

                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:hint="(669)226-2111"
                    android:id="@+id/p_phoneEdit"

                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/itemNameEditText"
                    android:text="@string/Deadline"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"
                    android:id="@+id/p_due"

                    android:padding="3dip" />
                <EditText
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/image"
                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:hint="04/15 20:37"
                    android:id="@+id/p_dueEdit"
                    />
            </TableRow>
            </TableLayout>

            <Button
                android:layout_below="@+id/p_table"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="48dp"
                android:text="Scan"
                android:id="@+id/scanbarcode"
                android:layout_gravity="right" />



        <Button
            android:layout_below="@+id/scanbarcode"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Confirm"
            android:layout_height="48dp"
            android:id="@+id/confirm"
            android:onClick="post" />
        </RelativeLayout>
</ScrollView>



