<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_blue"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/noimage"
            />
        <TableLayout
            android:id="@+id/p_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/main_image"
            android:layout_marginLeft="10dp"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/itemNameEditText"
                    android:text="@string/Item_Name"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"


                    android:padding="3dip" />
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/main_image"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:id="@+id/main_itemName"

                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/itemNameEditText"
                    android:text="@string/poster"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"


                    android:padding="3dip" />
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/main_image"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:id="@+id/main_needer"

                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"

                    android:text="@string/Price"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"


                    android:padding="3dip" />
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/main_image"
                    android:textColor="@android:color/darker_gray"
                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:id="@+id/main_price"

                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"

                    android:text="@string/address"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"


                    android:padding="3dip" />
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/main_image"
                    android:textColor="@android:color/darker_gray"
                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:id="@+id/main_address"

                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/itemNameEditText"
                    android:text="@string/phonenumber"
                    android:textColor="@android:color/black"

                    android:textSize="18sp"


                    android:padding="3dip" />
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/main_image"
                    android:textColor="@android:color/darker_gray"
                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:id="@+id/main_phone"

                    />
            </TableRow>
            <TableRow >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/itemNameEditText"
                    android:text="@string/Deadline"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="3dip" />
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/main_image"
                    android:layout_toRightOf="@+id/itemName"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/main_due"
                    />
            </TableRow>
        </TableLayout>

        <Button
            android:layout_below="@+id/p_table"
            style="@style/button_style"
            android:elevation="6dp"
            android:text="Accept"
            android:id="@+id/accept"
            android:layout_gravity="right"
            android:onClick="acceptRequest" />


    </RelativeLayout>
</ScrollView>
