<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_blue"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="70">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_height="240dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:id="@+id/profile_name"
                        android:background="#00ffffff"
                        android:text="Dave"/>

                    <com.cmu.neighbor2you.ui.SelectableRoundedImageView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_below="@+id/profile_name"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"
                        app:sriv_left_top_corner_radius="16dip"
                        app:sriv_right_top_corner_radius="0dip"
                        app:sriv_left_bottom_corner_radius="48dip"
                        app:sriv_right_bottom_corner_radius="16dip"


                        app:sriv_oval="true"


                        android:src="@drawable/default_photo"/>


            </RelativeLayout>
            <RatingBar
                android:id="@+id/profile_ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"
                android:clickable="false"
                android:numStars="5"
                android:stepSize="1.0"
                android:rating="2.7"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/phonenumber"
                    android:id="@+id/textView"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:text="123456"
                    android:id="@+id/profile_phone" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/address"
                    android:id="@+id/textView2"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:text="280 Easy Street"
                    android:id="@+id/profile_addr" />
            </LinearLayout>

        </LinearLayout>
        <Button
            style="@style/button_style"
            android:elevation="6dp"
            android:text="@string/update"


            android:id="@+id/profile_update"
            android:onClick="updateProfile" />
    </LinearLayout>

</ScrollView>


